<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="chose_a_dessert">Choose a dessert.</string>
    <string name="donut_desc">Donuts are glazed and sprinkled with candy</string>
    <string name="icecream_desc">Cool milk flavored icecreams</string>
    <string name="froyo_desc">Simply delicious</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="chose_delivery">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">"onRadioButtonClicked: Nothing clicked. "</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="google_mtw_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="snackbar_text">Replace with your own action</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="welcome_message">Welcome in droid cafe!</string>
</resources>
