<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"
        android:id="@+id/textintro" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/choose_dessert"
        android:layout_below="@+id/textintro"
        android:text="@string/chose_a_dessert"/>
    <ImageView
        android:id="@+id/donut"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        app:srcCompat="@drawable/donut_circle"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donut_desc"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_toRightOf="@id/donut"
        android:layout_below="@id/choose_dessert"
        android:text="@string/donut_desc" />
    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:id="@+id/icecream"
        app:srcCompat="@drawable/icecream_circle"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/donut"
        android:contentDescription="@string/icecream_desc"
        android:onClick="showIcecreamOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/icecream"
        android:text="@string/icecream_desc"/>
    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:id="@+id/froyo"
        app:srcCompat="@drawable/froyo_circle"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/icecream"
        android:contentDescription="@string/froyo_desc"
        android:onClick="showFroyoOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/icecream"
        android:layout_toRightOf="@id/icecream"
        android:text="@string/froyo_desc"/>

</RelativeLayout>